Finished megamek.common (except individual weapon files)